--- a/src/global.css
+++ b/src/global.css
@@ -12,3 +12,41 @@ body {
     background: #F0F0F5;
     -webkit-font-smoothing: antialiased;
 }
+
+input, button, textarea {
+    font: 400 18px STIX Two Math, sans-serif;
+}
+
+button {
+    cursor: pointer;
+}
+
+form input {
+    width: 100%;
+    height: 100%;
+    color: #333333;
+    border: 1px solid #DCDCE6;
+    border-radius: 8 px;
+    padding: 0 24px;
+    margin-top: 16px;
+}
+
+.button {
+    width: 100%;
+    height: 100%;
+    background: #251FC5;
+    border: 0;
+    border-radius: 8px;
+    color: #FFF;
+    font-weight: 700;
+    margin-top: 16px;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+}
+
+.button:hover {
+    filter: brightness(80%);
+}
