--- a/src/global.css
+++ b/src/global.css
@@ -26,14 +26,14 @@ form input {
     height: 100%;
     color: #333333;
     border: 1px solid #DCDCE6;
-    border-radius: 8 px;
+    border-radius: 8px;
     padding: 0 24px;
     margin-top: 16px;
 }
 
 .button {
     width: 100%;
-    height: 100%;
+    height: 60px;
     background: #251FC5;
     border: 0;
     border-radius: 8px;
@@ -45,6 +45,7 @@ form input {
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
+    transition: filter 0.2s;
 }
 
 .button:hover {
