--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -3,7 +3,6 @@
     max-width: 1120px;
     height: 100vh;
     margin: 0 auto;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -17,6 +16,7 @@
 
 .login-container section.form img {
     width: 45%;
+    border-radius:  4px;
     margin-left: auto;
     margin-right: auto;
     display: block;
