--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=STIX+Two+Math&display=swap');
 
+.global-container {
+    width: 100%;
+    max-width: 1120px;
+    height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.global-container section.form {
+    width: 100%;
+    max-width: 350px;
+    margin-right: 30px;
+}
+
+.global-container section.form img {
+    width: 45%;
+    border-radius:  4px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -23,7 +47,7 @@ button {
 
 form input {
     width: 100%;
-    height: 100%;
+    height: 60px;
     color: #333333;
     border: 1px solid #DCDCE6;
     border-radius: 4px;
