--- a/src/pages/Books/styles.css
+++ b/src/pages/Books/styles.css
@@ -5,32 +5,32 @@
     margin: 32px auto;
 }
 
-.book-container header {
+.header header {
     display: flex;
     align-items: center;
 }
 
-.book-container header span {
+.header header span {
     font-size: 20px;
     margin-left: 24px;
 }
 
-.book-container header span strong {
+.header header span strong {
     color: #251FC5;
 }
 
-.book-container header img {
+.header header img {
     height: 64px;
     border-radius: 4px;
 }
 
-.book-container header a {
+.header header a {
     width: 260px;
     margin-left: auto;
     margin-top: 0;
 }
 
-.book-container header button {
+.header header button {
     height: 60px;
     width: 60px;
     border-radius: 4px;
@@ -40,30 +40,30 @@
     transition: border-color 0.5s;
 }
 
-.book-container header button:hover {
+.header header button:hover {
     border-color: #251FC5;
 }
 
-.book-container h1 {
+.list h1 {
     margin-top: 80px;
     margin-bottom: 24px;
 }
 
-.book-container ul {
+.list ul {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 24px;
     list-style: none;
 }
 
-.book-container ul li {
+.list ul li {
     background: #ffffff;
     padding: 24px;
     border-radius: 4px;
     position: relative;
 }
 
-.book-container ul li button {
+.list ul li button {
     position: absolute;
     right: 24px;
     top: 24px;
@@ -71,25 +71,25 @@
     background: transparent;
 }
 
-.book-container ul li button + button {
+.list ul li button + button {
     top: 50px;
 }
 
-.book-container ul li button:hover {
+.list ul li button:hover {
     opacity: 0.8;
 }
 
-.book-container ul li strong {
+.list ul li strong {
     display: block;
     margin-bottom: 16px;
     color: #41414D;
 }
 
-.book-container ul li p + strong {
+.list ul li p + strong {
     margin-top: 32px;
 }
 
-.book-container ul li p {
+.list ul li p {
     color: #737380;
     line-height: 21px;
     font-size: 16px;
