--- a/src/pages/Books/styles.css
+++ b/src/pages/Books/styles.css
@@ -57,9 +57,11 @@
 }
 
 .list ul li {
-    background: #ffffff;
+    background: #F0F0F5;
     padding: 24px;
     border-radius: 4px;
+    border-color: black;
+    border: 6px;
     position: relative;
 }
 
